# pyH2A_CompressorPlugin

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: pyH2A_execution.py
data/LCA/: PV_E_Base.md
data/LCA/LCA_Test_Data/: A.npy  B.npy  C.npz  README.md  f.npy  lib.py  main.py
data/PEC/Base/: PEC_Base_alternate_order.md
data/PV_E/Base/: PV_E_Base_alternate_order.md
data/Photocatalytic/Base/: Photocatalytic_Base_alternate_order.md
data/Thermal/Base/: Thermal_Base.md
src/Tests/Utilities/: energy_conversion_test.py
src/pyH2A/: Discounted_Cash_Flow.py  Runner.py
src/pyH2A.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyH2A/Example/: 190226_PEC_Type_1_Comp.md
src/pyH2A/LCA/: LCA.py  LCA_lib.py
src/pyH2A/LCA/LCA_Test_Data/: index_A.csv  index_B.csv  index_C.csv
src/pyH2A/Plugins/: Compressor_Plugin.py  Photovoltaic_Plugin.py  Solar_Thermal_Plugin.py
src/pyH2A/Utilities/Unit_handler/: Unit_conversion.py  Unit_dimension.py
src/tests/Utilities/Unit_handler/: Unit_conversion_test.py  Unit_dimension_test.py  input_resolver_test_data.py
src/tests/end_to_end/: PEC_Base.md  PV_E_Base.md  Photocatalytic_Base.md  Thermal_Base.md
src/tests/plugins/: battery_plugin_test.py  catalyst_separation_plugin_test.py  hourly_irradiation_plugin_test.py  multiple_modules_plugin_test.py  solar_thermal_plugin_test.py  test_catalyst_separation_plugin.py
